force-app/main/default/objects/Vehicle__c/fields/Manufacture_year__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_year__c</fullName>
    <label>Manufacture year</label>
    <type>Date</type>
</CustomField>