force-app/main/default/objects/Vehicle__c/fields/Number_plate__c.field-meta.xml
<CustomField>
    <fullName>Number_plate__c</fullName>
    <label>Number plate</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>