force-app/main/default/objects/Vehicle__c/fields/Vehicle_status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_status__c</fullName>
    <label>Vehicle status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>