force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Manufacture_year__c</columns>
    <columns>Number_plate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>