force-app/main/default/objects/Vehicle__c/listViews/Available_vehicles.listView-meta.xml
<ListView>
    <fullName>Available_vehicles</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Manufacture_year__c</columns>
    <filterScope>Mine</filterScope>
    <label>Available vehicles</label>
</ListView>